--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ charset-normalizer==3.4.4
 click==8.3.0
 gitdb==4.0.12
 GitPython==3.1.45
+html5lib==1.1
 idna==3.11
 Jinja2==3.1.6
 jsonschema==4.25.1
@@ -38,3 +39,4 @@ typing_extensions==4.15.0
 tzdata==2025.2
 urllib3==2.5.0
 watchdog==6.0.0
+webencodings==0.5.1
