--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ jsonschema-specifications==2025.9.1
 lxml==6.0.2
 MarkupSafe==3.0.3
 narwhals==2.9.0
-numpy==2.3.4
+numpy>=1.24,<2.3
 packaging==25.0
 pandas==2.3.3
 pillow==11.3.0
@@ -40,4 +40,3 @@ tzdata==2025.2
 urllib3==2.5.0
 watchdog==6.0.0
 webencodings==0.5.1
-html5lib
